--- a/portifolio.html
+++ b/portifolio.html
@@ -18,7 +18,7 @@
     </header>
     <<section id="about">
         <div class="about-container">
-            <img src="perfil.png" alt="Avatar Anime" class="avatar">
+            <img src="imagens\perfil.png" alt="Avatar Anime" class="avatar">
             <div class="about-text">
                 <h2>Hugo Amorim</h2>
                 <p>Desenvolvedor apaixonado por tecnologia e cultura Geek. Confira meus projetos!</p>
